--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -27,7 +27,8 @@ lib_configuration = LinkLibrary( 'bin/casual-configuration',
         Compile( 'source/domain.cpp'),
         Compile( 'source/xa_switch.cpp'),
         Compile( 'source/serverdefinition.cpp'),
-        Compile( 'source/queue.cpp')
+        Compile( 'source/queue.cpp'),
+        Compile( 'source/gateway.cpp'),
     ],
     ['casual-common',
     'casual-sf'])
@@ -44,8 +45,9 @@ LinkUnittest( 'bin/test-casual-configuration',
         Compile( 'unittest/isolated/source/test_domain.cpp'),
         Compile( 'unittest/isolated/source/test_xa_switch.cpp'),
         Compile( 'unittest/isolated/source/test_queue.cpp'),
+        Compile( 'unittest/isolated/source/test_gateway.cpp'),
    ],
-   [ lib_configuration, 'casual-sf', 'casual-common'])  
+   [ lib_configuration, 'casual-sf', 'casual-common', 'casual-mockup'])  
    
 #
 # Install
