--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -74,6 +74,7 @@ casual_common_objectfiles = [
     Compile( 'source/error.cpp'),
     Compile( 'source/chronology.cpp'),
     Compile( 'source/process.cpp'),
+    Compile( 'source/domain.cpp'),
     Compile( 'source/execution.cpp'),
     Compile( 'source/network/byteorder.cpp'),
     Compile( 'source/network/tcp.cpp'),
