WIP gateway (#9) gateway with ipc full unittest works
some other minor cleanups...

--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -34,6 +34,7 @@ common_archive = LinkArchive( 'bin/casual-gateway-common',
        Compile( 'source/outbound/routing.cpp'),       
        Compile( 'source/inbound/cache.cpp'),
        Compile( 'source/transform.cpp'),
+       Compile( 'source/message.cpp'),
      ])
         
 
