--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -35,6 +35,7 @@ common_archive = LinkArchive( 'bin/casual-gateway-common',
        Compile( 'source/inbound/cache.cpp'),
        Compile( 'source/transform.cpp'),
        Compile( 'source/message.cpp'),
+       Compile( 'source/manager/listener.cpp'),
      ])
         
 
@@ -59,6 +60,36 @@ target = LinkExecutable( 'bin/casual-gateway-manager',
 
 install_bin.append( target)
 
+
+
+#
+# The outbound tcp connector
+#
+target = LinkExecutable( 'bin/casual-gateway-outbound-tcp',
+    [
+     Compile( 'source/outbound/tcp/main.cpp'),
+    ],
+    [
+     common_archive, 
+     'casual-common',  
+     ])
+
+install_bin.append( target)
+
+#
+# The inbound tcp connector
+#
+target = LinkExecutable( 'bin/casual-gateway-inbound-tcp',
+    [
+     Compile( 'source/inbound/tcp/main.cpp'),
+    ],
+    [
+     common_archive, 
+     'casual-common', 
+     ])
+
+install_bin.append( target)
+
 #
 # The outbound ipc connector
 #
@@ -68,10 +99,7 @@ target = LinkExecutable( 'bin/casual-gateway-outbound-ipc',
     ],
     [
      common_archive, 
-     'casual-sf', 
      'casual-common', 
-     'casual-configuration', 
-     'casual-xatmi',
      ])
 
 install_bin.append( target)
@@ -86,10 +114,7 @@ target = LinkExecutable( 'bin/casual-gateway-inbound-ipc',
     ],
     [
      common_archive, 
-     'casual-sf', 
      'casual-common', 
-     'casual-configuration', 
-     'casual-xatmi',
      ])
 
 install_bin.append( target)
@@ -101,10 +126,18 @@ install_bin.append( target)
 
 target_unittest = LinkUnittest( 'bin/test-casual-gateway',
    [
-        Compile( 'unittest/isolated/source/test_manager.cpp'),
         Compile( 'unittest/isolated/source/test_inbound_cache.cpp'),
-        Compile( 'unittest/isolated/source/test_inbound_ipc.cpp'),
-        Compile( 'unittest/isolated/source/test_outbound_ipc.cpp'),
+        
+        # ipc
+        Compile( 'unittest/isolated/source/ipc/test_manager.cpp'),
+        Compile( 'unittest/isolated/source/ipc/test_inbound.cpp'),
+        Compile( 'unittest/isolated/source/ipc/test_outbound.cpp'),
+        
+        # tcp
+        Compile( 'unittest/isolated/source/tcp/test_outbound.cpp'),
+        Compile( 'unittest/isolated/source/tcp/test_listener.cpp'),
+        Compile( 'unittest/isolated/source/tcp/test_manager.cpp'),
+        
    ], 
    [ common_archive, 'casual-sf', 'casual-common', 'casual-mockup', 'casual-mockup-unittest-environment']) 
 
