casual-log #30 - Not full formatting and this is only 10% faster
Maybe we can get this faster, and I see some benefits to be able to get
formatted logs without have to set python paths and such. That is for
the casaul user.

Think we should complete the formatting.

--- a/middleware/tools/makefile.cmk
+++ b/middleware/tools/makefile.cmk
@@ -39,6 +39,13 @@ target = LinkExecutable( 'bin/casual-build-resource-proxy',
 install_bin.append( target)
 
 
+target = LinkExecutable( 'bin/casual-log-format',
+   [ Compile( 'log/source/format.cpp')],
+   [ 'casual-common'])
+
+install_bin.append( target)
+
+
 Install( install_bin, '$(CASUAL_HOME)/bin')
 
 
