Fixes #16 to make archive-writer from file-name (might need some review)

--- a/middleware/serviceframework/makefile.cmk
+++ b/middleware/serviceframework/makefile.cmk
@@ -57,6 +57,7 @@ LinkUnittest( 'bin/test-casual-sf',
         Compile( 'unittest/isolated/source/test_xml_archive.cpp'),
         Compile( 'unittest/isolated/source/test_ini_archive.cpp'),
         Compile( 'unittest/isolated/source/test_buffer.cpp'),
+        Compile( 'unittest/isolated/source/test_maker.cpp'),
         Compile( 'unittest/isolated/source/test_service.cpp'),
         Compile( 'unittest/isolated/source/test_uuid.cpp'),
         Compile( 'unittest/isolated/source/test_xatmi_call.cpp'),
