--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -7,7 +7,7 @@ from casual.middleware.make.dsl import *
 IncludePaths([
    'include',
    '../common/include',
-   #'../configuration/include',
+   '../configuration/include',
    '../xatmi/include',
    '../serviceframework/include',
    '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
@@ -17,7 +17,7 @@ IncludePaths([
 LibraryPaths([
     'bin',
     '../common/bin',
-    #'../configuration/bin',
+    '../configuration/bin',
     '../xatmi/bin',
     '../serviceframework/bin',
     '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
@@ -46,6 +46,7 @@ target = LinkExecutable( 'bin/casual-domain-manager',
     [
      'casual-common',
      'casual-xatmi',
+     'casual-configuration',
      'casual-sf'
     ] 
 )
@@ -55,10 +56,13 @@ target = LinkExecutable( 'bin/casual-domain-manager',
 target_test_delay = LinkUnittest( 'bin/test-casual-domain', 
     [ 
         Compile( 'unittest/isolated/source/manager/test_state.cpp'),
+        Compile( 'unittest/isolated/source/manager/test_manager.cpp'),
+        
     ] + manager_objecs,
     [
      'casual-common',
      'casual-mockup',
+     'casual-configuration',
      'casual-mockup-unittest-environment',
     ]) 
 
