gateway #9 name, id, address exchange between domains
On startup inbound and outbound ask each other for information about the
other side.

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -62,6 +62,7 @@ casual_common_objectfiles = [
     Compile( 'source/message/queue.cpp'),
     Compile( 'source/message/transaction.cpp'),
     Compile( 'source/message/domain.cpp'),
+    Compile( 'source/message/gateway.cpp'),
     
     Compile( 'source/exception.cpp'),
     Compile( 'source/uuid.cpp'),
