--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -20,7 +20,6 @@
     "paper-material": "^1.0.6",
     "paper-menu": "^1.2.2",
     "paper-toast": "^1.2.2",
-    "paper-datatable": "^0.9.8",
     "iron-pages": "^1.0.7",
     "iron-icons": "^1.1.3",
     "paper-scroll-header-panel": "^1.0.15",
@@ -28,6 +27,6 @@
     "page": "page.js#^1.7.1",
     "paper-styles": "^1.1.4",
     "paper-icon-button": "^1.1.1",
-    "paper-ripple": "*"
+    "iron-ajax": "^1.2.0"
   }
 }
