--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -36,6 +36,7 @@ install_bin = []
 
 common = LinkLibrary( 'bin/casual-queue-common',
    [
+    Compile( 'source/common/log.cpp'),
     Compile( 'source/common/environment.cpp'),
     Compile( 'source/common/transform.cpp'),
     Compile( 'source/common/queue.cpp'),
@@ -136,7 +137,8 @@ queue_api = LinkLibrary( 'bin/casual-queue-api',
    [
        Compile( 'source/api/queue.cpp')
    ],
-   [ 
+   [
+    common, 
     'casual-sf', 
     'casual-common', 
     ])
