Change some makefiles so we get LD_LIBRARY_PATH correct for build-server and such

--- a/middleware/example/makefile.cmk
+++ b/middleware/example/makefile.cmk
@@ -9,6 +9,8 @@ LibraryPaths( [ 'server/bin',
     '../common/bin',
     '../queue/bin',
     '../buffer/bin',
+    '../configuration/bin',
+    '../serviceframework/bin',
     '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
     ])
 
