--- a/middleware/test/makefile.cmk
+++ b/middleware/test/makefile.cmk
@@ -14,6 +14,7 @@ LibraryPaths( [ 'bin',
 	'../queue/bin',
 	'../buffer/bin',
 	'../serviceframework/bin',
+        '../configuration/bin',
 	'$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
 	])
 
