WIP #55 checkpoint before trying to implement 'sending header'
That is, have an area where user and systems can send information that
is not part of the payload/api.

Think I start with mimic http header which is just name-value-pairs with
strings, and see how that turns out.

--- a/middleware/serviceframework/makefile.cmk
+++ b/middleware/serviceframework/makefile.cmk
@@ -35,6 +35,7 @@ lib_sf = LinkLibrary( 'bin/casual-sf',
         Compile( 'source/service/protocol.cpp'),
         Compile( 'source/xatmi_call.cpp'),
         Compile( 'source/platform.cpp'),
+        Compile( 'source/log.cpp'),
         
     ],
     ['casual-common', 'casual-xatmi', 'yaml-cpp', 'pugixml'])
