--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -34,9 +34,10 @@ casual_common_objectfiles = [
     Compile( 'source/server/handle.cpp'),
     Compile( 'source/server/service.cpp'),
     
-    Compile( 'source/call/context.cpp'),
-    Compile( 'source/call/state.cpp'),
-    Compile( 'source/call/lookup.cpp'),
+    Compile( 'source/service/call/context.cpp'),
+    Compile( 'source/service/call/state.cpp'),
+    Compile( 'source/service/lookup.cpp'),
+    Compile( 'source/service/header.cpp'),
     
     Compile( 'source/buffer/x_octet.cpp'),
     Compile( 'source/buffer/pool.cpp'),
@@ -51,7 +52,8 @@ casual_common_objectfiles = [
     Compile( 'source/communication/ipc.cpp'),
     Compile( 'source/communication/tcp.cpp'),
     Compile( 'source/communication/message.cpp'),
-
+    Compile( 'source/communication/log.cpp'),
+    
     
     Compile( 'source/message/type.cpp'),
     Compile( 'source/message/handle.cpp'),
@@ -79,7 +81,6 @@ casual_common_objectfiles = [
     Compile( 'source/domain.cpp'),
     Compile( 'source/execution.cpp'),
     Compile( 'source/network/byteorder.cpp'),
-    #Compile( 'source/network/tcp.cpp'),
     Compile( 'source/transcode.cpp'),
     Compile( 'source/timeout.cpp'),
     
@@ -111,6 +112,7 @@ mockup = LinkLibrary( 'bin/casual-mockup',
        Compile( 'source/mockup/process.cpp'),
        Compile( 'source/mockup/file.cpp'),
        Compile( 'source/mockup/thread.cpp'),
+       Compile( 'source/mockup/log.cpp'),
      ],
      [ common])
 
@@ -123,7 +125,7 @@ target = LinkLibrary( 'bin/casual-mockup-rm',
      [
        Compile( 'source/mockup/rm.cpp')
      ],
-     [ common])
+     [ common, mockup])
 
 install_libs.append( target)
 
@@ -152,6 +154,7 @@ unittest_objectfiles = [
     
     Compile( 'unittest/isolated/source/test_algorithm.cpp'),      
     Compile( 'unittest/isolated/source/test_memory.cpp'),
+    Compile( 'unittest/isolated/source/test_pimpl.cpp'),
     
     Compile( 'unittest/isolated/source/test_flag.cpp'),  
             
@@ -167,7 +170,8 @@ unittest_objectfiles = [
     Compile( 'unittest/isolated/source/test_string.cpp'),
     Compile( 'unittest/isolated/source/test_environment.cpp'),
     Compile( 'unittest/isolated/source/test_error.cpp'),
-    Compile( 'unittest/isolated/source/test_network_byteorder.cpp'),
+    
+    Compile( 'unittest/isolated/source/network/test_byteorder.cpp'),
     
     Compile( 'unittest/isolated/source/test_traits.cpp'),
     Compile( 'unittest/isolated/source/test_chronology.cpp'),
@@ -176,18 +180,23 @@ unittest_objectfiles = [
     
     Compile( 'unittest/isolated/source/communication/test_tcp.cpp'),
     Compile( 'unittest/isolated/source/communication/test_ipc.cpp'),
+    
+    
        
+    
+    Compile( 'unittest/isolated/source/message/test_dispatch.cpp'),
+    
+    
+    Compile( 'unittest/isolated/source/server/test_context.cpp'),
+    Compile( 'unittest/isolated/source/server/test_service.cpp'),
+    Compile( 'unittest/isolated/source/server/test_arguments.cpp'),
+    
+    Compile( 'unittest/isolated/source/service/test_header.cpp'),
+
     Compile( 'unittest/isolated/source/test_mockup.cpp'),
     
-    
-    Compile( 'unittest/isolated/source/test_message_dispatch.cpp'),
-    
-    Compile( 'unittest/isolated/source/test_server_context.cpp'),
-    Compile( 'unittest/isolated/source/test_service.cpp'),
- 
-    
-    Compile( 'unittest/isolated/source/test_transaction_id.cpp'),
-    Compile( 'unittest/isolated/source/test_transaction.cpp'),
+    Compile( 'unittest/isolated/source/transaction/test_id.cpp'),
+    Compile( 'unittest/isolated/source/transaction/test_context.cpp'),
 ]
 
 
