Resolves #57 service header - also a take on #55

--- a/middleware/tools/makefile.cmk
+++ b/middleware/tools/makefile.cmk
@@ -63,6 +63,7 @@ target = LinkExecutable( 'bin/casual-service-describe',
    [ 
     common_a,
     'casual-common', 
+    'casual-sf',
     'casual-xatmi',
     ])
 
