resolves #61 example protocol
Some minor changes how we handle empty/null buffers, and also how we
handle empty documents for json, yaml, xml and ini protocols.

Might be good if someone else took a look at the implementation.

--- a/middleware/tools/makefile.cmk
+++ b/middleware/tools/makefile.cmk
@@ -69,6 +69,17 @@ target = LinkExecutable( 'bin/casual-service-describe',
 
 install_bin.append( target)
 
+target = LinkExecutable( 'bin/casual-service-example',
+   [ Compile( 'source/service/example/main.cpp')],
+   [ 
+    common_a,
+    'casual-common', 
+    'casual-sf',
+    'casual-xatmi',
+    ])
+
+install_bin.append( target)
+
 
 
 target = LinkExecutable( 'bin/casual-log-format',
