--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -161,7 +161,7 @@ Dependencies( target_unittest, install_bin)
 
 
 
-tartet = LinkExecutable( "docs/bin/print-protocol",
+tartet = LinkExecutable( "documentation/bin/print-protocol",
      [
         Compile( 'documentation/source/protocol.cpp')
       ],
