WIP #67 gateway discovery
Also, some minor refactoring on some messages

--- a/middleware/broker/makefile.cmk
+++ b/middleware/broker/makefile.cmk
@@ -33,6 +33,7 @@ logic_archive = LinkArchive( 'bin/casual-broker-logic',
    Compile( 'source/handle.cpp'),
    Compile( 'source/state.cpp'),
    Compile( 'source/transform.cpp'),
+   Compile( 'source/common.cpp'),
    Compile( 'source/admin/server.cpp'),
    ])
 
@@ -61,6 +62,7 @@ target = LinkExecutable( 'bin/casual-forward-cache',
         Compile( 'source/forward/main.cpp')
      ] + forward_objs,
     [
+      logic_archive,
       'casual-common'
      ])
 
