--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -38,6 +38,7 @@ casual_common_objectfiles = [
     Compile( 'source/service/call/state.cpp'),
     Compile( 'source/service/lookup.cpp'),
     Compile( 'source/service/header.cpp'),
+    Compile( 'source/service/type.cpp'),
     
     Compile( 'source/buffer/x_octet.cpp'),
     Compile( 'source/buffer/pool.cpp'),
