Some broker CLI improvements

--- a/middleware/broker/makefile.cmk
+++ b/middleware/broker/makefile.cmk
@@ -5,6 +5,7 @@ IncludePaths( [
     'admin/include',
 	'../common/include',
 	'../configuration/include',
+    '../domain/include',
 	'../xatmi/include',
 	'../serviceframework/include',
 	'$(CASUAL_OPTIONAL_INCLUDE_PATHS)'])
