--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -1,32 +1,26 @@
-{
-  "name": "Casual",
-  "authors": [
-    "Alex <engla.alex@gmail.com>"
-  ],
-  "description": "",
-  "main": "",
-  "license": "MIT",
-  "homepage": "",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "paper-drawer-panel": "^1.0.9",
-    "paper-material": "^1.0.6",
-    "paper-menu": "^1.2.2",
-    "paper-toast": "^1.2.2",
-    "iron-pages": "^1.0.7",
-    "iron-icons": "^1.1.3",
-    "paper-scroll-header-panel": "^1.0.15",
-    "paper-toolbar": "^1.1.4",
-    "page": "page.js#^1.7.1",
-    "paper-styles": "^1.1.4",
-    "paper-icon-button": "^1.1.1",
-    "iron-ajax": "^1.2.0"
-  }
+	{
+	"name": "Casual-app",
+	"authors": [
+		"The Casual Crew"
+	],
+	"private": true,
+	"dependencies": {
+		"app-layout": "polymerelements/app-layout#^0.9.0",
+		"app-route": "polymerelements/app-route#^0.9.1",
+		"iron-flex-layout": "polymerelements/iron-flex-layout#^1.0.0",
+		"iron-icon": "polymerelements/iron-icon#^1.0.0",
+		"iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.0",
+		"iron-localstorage": "polymerelements/iron-localstorage#^1.0.0",
+		"iron-media-query": "polymerelements/iron-media-query#^1.0.0",
+		"iron-pages": "polymerelements/iron-pages#^1.0.0",
+		"iron-selector": "polymerelements/iron-selector#^1.0.0",
+		"paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
+		"polymer": "polymer/polymer#^1.4.0",
+		"iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
+		"iron-iconset": "PolymerElements/iron-iconset#^1.0.4",
+		"iron-icons": "PolymerElements/iron-icons#^1.1.3"
+	},
+	"devDependencies": {
+		"web-component-tester": "^4.0.0"
+	}
 }
