--- a/webapp/config.json
+++ b/webapp/config.json
@@ -11,6 +11,29 @@
 
 	"remote" : {
 		"url" : "http://casual.laz.se/casual/casual"
+	},
+
+	"service" : {
+		"url" : "?service=",
+
+		"domain" : {
+			"state" : ".casual.domain.state"
+		},
+
+		"broker" : {
+			"state" : ".casual.broker.state",
+			"scale" : {
+				"instances" : ".casual.broker.scale.instances"
+			},
+			"shutdown" : ".casual.domain.shutdown" 
+		}, 
+
+		"transaction" : {
+			"state" : ".casual.transaction.state",
+			"update" : {
+				"instances" : ".casual.broker.update.instances"
+			}
+		}
 	}
 
 }
