--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -242,7 +242,9 @@ test_casual_queue = LinkUnittest( 'unittest/bin/test-casual-queue',
      'casual-sf',
      'casual-configuration',
      'sqlite3',
-     'casual-xatmi'
+     'casual-xatmi',
+     'casual-unittest',
+     
      ]  
 );
 
