--- a/middleware/transaction/makefile.cmk
+++ b/middleware/transaction/makefile.cmk
@@ -122,7 +122,8 @@ LinkUnittest( 'bin/test-casual-transaction',
      'casual-mockup',
      'casual-mockup-rm',
      'casual-xatmi',
-     'casual-mockup-unittest-environment'
+     'casual-mockup-unittest-environment',
+     'casual-unittest',
      ])
 
 
