--- a/middleware/example/domain/multiple/minimal/domain1/domain.env
+++ b/middleware/example/domain/multiple/minimal/domain1/domain.env
@@ -16,4 +16,4 @@ export CASUAL_DOMAIN_HOME=$HOME/casual/example/domain/multiple/minimal/domain1
 #
 # Defines what will be logged.
 #
-export CASUAL_LOG=error,warning,information
+export CASUAL_LOG='(error|warning|information)'
